--- a/ui/src/apps/keyvis/RootComponent.less
+++ b/ui/src/apps/keyvis/RootComponent.less
@@ -1,8 +1,10 @@
 .PD-KeyVis {
-  font-family: 'Poppins';
+  // font-family: 'Poppins';
   font-size: 14px;
   width: 100%;
   height: calc(100vh - 170px);
+
+  padding: 16px;
 
   .ui.dropdown .menu {
     z-index: 9999;
@@ -10,17 +12,18 @@
 
   .PD-KeyVis-Toolbar {
     display: flex;
-    flex-wrap: wrap-reverse;
     align-items: center;
+    background-color: white;
+    padding: 16px;
 
     .PD-Cluster-Legend {
       width: 410px;
       position: relative;
       height: 30px;
-      margin: 10px 0px;
+      margin-top: 16px;
 
       p.unit {
-        font-family: 'Poppins';
+        // font-family: 'Poppins';
         font-size: 12px;
         color: #333;
         margin-top: 5px;
@@ -40,36 +43,14 @@
     }
 
     .space {
-      flex: 1;
+      width: 12px;
     }
 
-    .PD-Action-Icon {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 68px;
-      padding-top: 12px;
-
-      &.clickable {
-        cursor: pointer;
-        margin-left: 12px;
-      }
-
-      .ant-select-selection {
-        border: none;
-        background-color: transparent;
-        line-height: 1;
-        color: black;
-      }
-
-      & > span {
-        margin-top: 5px;
-        height: 27px;
-      }
-    }
-    .PD-Action-Icon:last-child {
-      margin-right: 40px;
+    .select-icon {
+      border: 1px solid #ccc;
+      height: 32px;
+      width: 32px;
+      padding: 4px 8px;
     }
   }
 
@@ -168,4 +149,17 @@
     width: 100%;
     height: 100%;
   }
+}
+
+#brightness-overlay {
+  background-color: white;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  box-shadow: 0 100px 80px rgba(0, 0, 0, 0.12);
 }
