--- a/ui/src/apps/keyvis/RootComponent.less
+++ b/ui/src/apps/keyvis/RootComponent.less
@@ -1,8 +1,12 @@
+@import '~antd/es/style/themes/default.less';
+
 .PD-KeyVis {
-  font-family: 'Poppins';
+  // font-family: 'Poppins';
   font-size: 14px;
   width: 100%;
   height: calc(100vh - 170px);
+
+  padding: 16px;
 
   .ui.dropdown .menu {
     z-index: 9999;
@@ -10,16 +14,18 @@
 
   .PD-KeyVis-Toolbar {
     display: flex;
-    flex-wrap: wrap-reverse;
+    align-items: center;
+    background-color: white;
+    padding: 16px;
 
     .PD-Cluster-Legend {
       width: 410px;
       position: relative;
       height: 30px;
-      margin: 10px 0px;
+      margin-top: 16px;
 
       p.unit {
-        font-family: 'Poppins';
+        // font-family: 'Poppins';
         font-size: 12px;
         color: #333;
         margin-top: 5px;
@@ -36,6 +42,10 @@
       .icon {
         color: #1b1c1d;
       }
+    }
+
+    .space {
+      width: 12px;
     }
   }
 
@@ -134,4 +144,21 @@
     width: 100%;
     height: 100%;
   }
+}
+
+#PD-KeyVis-Brightness-Overlay {
+  background-color: white;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  box-shadow: @box-shadow-base;
+}
+
+.PD-KeyVis-Select-Option .anticon {
+  display: none;
 }
