--- a/ui/src/layout/RootComponent.module.less
+++ b/ui/src/layout/RootComponent.module.less
@@ -10,9 +10,9 @@
   z-index: 10;
   padding: 0;
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
+  box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   width: 100%;
-  transition: width .2s;
+  transition: width 0.2s;
 }
 
 .sider {
@@ -21,7 +21,7 @@
   top: 0;
   height: 100%;
   z-index: 20;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
 }
 
 .siderTrigger {
