--- a/ui/src/layout/RootComponent.module.less
+++ b/ui/src/layout/RootComponent.module.less
@@ -4,24 +4,13 @@
   min-height: 100vh;
 }
 
-.header {
-  position: fixed;
-  right: 0;
-  z-index: 10;
-  padding: 0;
-  background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
-  width: 100%;
-  transition: width .2s;
-}
-
 .sider {
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   z-index: 20;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
 }
 
 .siderTrigger {
@@ -40,4 +29,22 @@
   position: relative;
   z-index: 1;
   padding-top: @layout-header-height;
+}
+
+.nav {
+  position: fixed;
+  right: 0;
+  z-index: 10;
+  padding: 0;
+  background: #fff;
+  box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+  width: 100%;
+  transition: width 0.2s;
+  display: flex;
+}
+
+.navRight {
+  float: right;
+  margin-left: auto;
+  overflow: hidden;
 }
