--- a/ui/src/apps/statement/components/styles.module.css
+++ b/ui/src/apps/statement/components/styles.module.css
@@ -1,7 +1,3 @@
-.statement_detail {
-  /* background-color: white; */
-}
-
 .statement_summary {
   display: flex;
   margin-bottom: 12px;
@@ -19,4 +15,9 @@
   background-color: white;
   padding: 12px;
   margin-left: 12px;
+}
+
+/* for StatementSettingModal */
+.config_form :global(.ant-form-item) {
+  margin-bottom: 0;
 }
