--- a/ui/src/apps/keyvis/RootComponent.less
+++ b/ui/src/apps/keyvis/RootComponent.less
@@ -17,6 +17,7 @@
     align-items: center;
     background-color: white;
     padding: 16px;
+    flex-wrap: wrap;
 
     .PD-Cluster-Legend {
       width: 410px;
