--- a/ui/src/layout/signin/RootComponent.module.less
+++ b/ui/src/layout/signin/RootComponent.module.less
@@ -1,9 +1,13 @@
-.dialog {
+.container {
   width: 380px;
   margin: 0 auto;
-  margin-top: 30px;
+  padding-top: 30px;
+}
+
+.dialog {
   background-color: #fff;
   padding: 40px;
+  padding-bottom: 10px;
   border-radius: 6px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
