--- a/ui/src/apps/keyvis/RootComponent.less
+++ b/ui/src/apps/keyvis/RootComponent.less
@@ -17,6 +17,7 @@
     align-items: center;
     background-color: white;
     padding: 16px;
+    flex-wrap: wrap;
 
     .PD-Cluster-Legend {
       width: 410px;
@@ -155,11 +156,6 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   box-shadow: @box-shadow-base;
 }
 
