[Update] Update CSS
Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterinfo/components/component_panel.module.less
+++ b/ui/src/apps/clusterinfo/components/component_panel.module.less
@@ -1,12 +1,23 @@
 @import '~antd/es/style/themes/default.less';
 
-.component-panel {
-  p.desc-text {
-    color: gray;
-    font-size: small;
-  }
-
-  p.down-cnt {
-    color: red;
-  }
+.desc {
+  color: gray;
+  font-size: small;
 }
+
+.column {
+  line-height: 8px;
+}
+
+.alive {
+  font-size: medium;
+  font-weight: bold;
+  color: black;
+}
+
+.down {
+  font-size: medium;
+  font-weight: bold;
+  color: red;
+}
+
