--- a/ui/src/apps/clusterInfo/components/ComponentPanel.module.less
+++ b/ui/src/apps/clusterInfo/components/ComponentPanel.module.less
@@ -6,7 +6,8 @@
 }
 
 .column {
-  line-height: 8px;
+  margin-top: 10px;
+  line-height: 12px;
 }
 
 .alive {
@@ -19,4 +20,14 @@
   font-size: medium;
   font-weight: bold;
   color: red;
+}
+
+.bottom {
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+}
+
+.split {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
