--- a/ui/src/apps/clusterInfo/components/MonitorAlertBar.module.less
+++ b/ui/src/apps/clusterInfo/components/MonitorAlertBar.module.less
@@ -1,6 +1,12 @@
 @import '~antd/es/style/themes/default.less';
 
 .desc {
+  margin-left: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+}
+
+.height {
   line-height: 30px;
 }
 
