Refine UI to adapt DBaaS
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/src/layout/signin/RootComponent.module.less
+++ b/ui/src/layout/signin/RootComponent.module.less
@@ -30,7 +30,7 @@
 }
 
 .landing {
-  flex: 1;
+  flex-grow: 1;
   background-image: url(./landing.svg);
   background-size: cover;
   background-position: center left;
