--- a/ui/src/layout/main/RootComponent.module.less
+++ b/ui/src/layout/main/RootComponent.module.less
@@ -4,21 +4,9 @@
   min-height: 100vh;
 }
 
-.container>section {
-  overflow-x: unset !important;
-}
-
-.sider {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  z-index: 20;
-  box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
-}
-
 .content {
   position: relative;
-  z-index: 1;
-  padding-top: @layout-header-height;
+  z-index: 2;
+  box-shadow: 0 0 30px rgba(#000, 0.15);
+  background: #fff;
 }
