--- a/ui/packages/keyvis/src/components/KeyVis.less
+++ b/ui/packages/keyvis/src/components/KeyVis.less
@@ -1,7 +1,6 @@
-@import '~antd/es/style/themes/default.less';
+// @import '~antd/es/style/themes/default.less';
 
 .PD-KeyVis {
-  // font-family: 'Poppins';
   font-size: 14px;
   width: 100%;
   height: calc(100vh - 170px);
@@ -26,7 +25,6 @@
       margin-top: 16px;
 
       p.unit {
-        // font-family: 'Poppins';
         font-size: 12px;
         color: #333;
         margin-top: 5px;
@@ -161,7 +159,7 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-shadow: @box-shadow-base;
+  // box-shadow: @box-shadow-base;
 }
 
 .PD-KeyVis-Select-Option .anticon {
