--- a/ui/packages/keyvis/src/components/KeyVis.less
+++ b/ui/packages/keyvis/src/components/KeyVis.less
@@ -1,4 +1,5 @@
 // @import '~antd/es/style/themes/default.less';
+@import '../../../../node_modules/antd/es/style/themes/default.less';
 
 .PD-KeyVis {
   font-size: 14px;
@@ -159,7 +160,7 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  // box-shadow: @box-shadow-base;
+  box-shadow: @box-shadow-base;
 }
 
 .PD-KeyVis-Select-Option .anticon {
