--- a/ui/src/layout/main/Sider.module.less
+++ b/ui/src/layout/main/Sider.module.less
@@ -11,6 +11,7 @@
   background: linear-gradient(@sider-background, #ebeffa);
   overflow-x: hidden;
   overflow-y: auto;
+  transition: none;
 
   :global {
     .ant-layout-sider-children {
