--- a/ui/src/apps/keyvis/RootComponent.less
+++ b/ui/src/apps/keyvis/RootComponent.less
@@ -1,12 +1,9 @@
 @import '~antd/es/style/themes/default.less';
 
 .PD-KeyVis {
-  // font-family: 'Poppins';
-  font-size: 14px;
-  width: 100%;
-  height: calc(100vh - 170px);
-
-  padding: 16px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 
   .ui.dropdown .menu {
     z-index: 9999;
@@ -15,8 +12,6 @@
   .PD-KeyVis-Toolbar {
     display: flex;
     align-items: center;
-    background-color: white;
-    padding: 16px;
     flex-wrap: wrap;
 
     .PD-Cluster-Legend {
@@ -151,8 +146,9 @@
   }
 
   .heatmap {
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
+    margin: @padding-page;
+    margin-top: -32px;
   }
 }
 
