--- a/ui/packages/dashboard_components/src/CardTable/index.module.less
+++ b/ui/packages/dashboard_components/src/CardTable/index.module.less
@@ -1,4 +1,5 @@
-@import '~antd/es/style/themes/default.less';
+// @import '~antd/es/style/themes/default.less';
+@import '../../../../node_modules/antd/es/style/themes/default.less';
 
 .cardTable {
   :global {
