--- a/ui/packages/dashboard_components/src/CardTable/index.module.less
+++ b/ui/packages/dashboard_components/src/CardTable/index.module.less
@@ -10,6 +10,10 @@
     .ant-table-row td:first-child {
       padding-left: @padding-page !important;
     }
+
+    .ant-table-pagination {
+      margin-right: @padding-page !important;
+    }
   }
 }
 
