--- a/pkg/apiserver/diagnose/templates/index.gohtml
+++ b/pkg/apiserver/diagnose/templates/index.gohtml
@@ -32,6 +32,7 @@
                 top: 0;
                 left: 0;
                 padding-top: 60px;
+                overflow: scroll;
             }
 
             .sidenav a {
