--- a/ui/packages/statement/src/components/HorizontalBar.module.css
+++ b/ui/packages/statement/src/components/HorizontalBar.module.css
@@ -40,4 +40,20 @@
 }
 
 .max_bar {
+  height: 3px;
+  background-color: #f2be2c;
+  position: absolute;
+  top: 5px;
+}
+
+.max_bar::after {
+  content: '';
+  position: absolute;
+  border-color: #f2be2c;
+  border-style: solid;
+  border-width: 0 3px 0 0;
+  height: 10px;
+  width: 3px;
+  top: -3px;
+  right: 0px;
 }
