--- a/ui/packages/statement/src/components/HorizontalBar.module.less
+++ b/ui/packages/statement/src/components/HorizontalBar.module.less
@@ -1,3 +1,5 @@
+@import '../../../../node_modules/antd/es/style/themes/default.less';
+
 .container {
   display: flex;
   align-items: center;
@@ -13,35 +15,35 @@
 
 .normal_bar {
   height: 14px;
-  background-color: #3a7de1;
+  background-color: @primary-color;
 }
 
 .max_bar {
-  height: 3px;
-  background-color: #f2be2c;
+  height: 2px;
+  background-color: @gold-5;
   position: absolute;
-  top: 5px;
+  top: 6px;
 }
 
 .min_bar::before {
   content: '';
   position: absolute;
-  border-color: #f2be2c;
+  border-color: @gold-5;
   border-style: solid;
-  border-width: 0 3px 0 0;
+  border-width: 0 2px 0 0;
   height: 10px;
-  width: 3px;
-  top: -3px;
+  width: 2px;
+  top: -4px;
 }
 
 .max_bar::after {
   content: '';
   position: absolute;
-  border-color: #f2be2c;
+  border-color: @gold-5;
   border-style: solid;
-  border-width: 0 3px 0 0;
+  border-width: 0 2px 0 0;
   height: 10px;
-  width: 3px;
-  top: -3px;
+  width: 2px;
+  top: -4px;
   right: 0px;
 }
