--- a/ui/packages/statement/src/components/styles.module.less
+++ b/ui/packages/statement/src/components/styles.module.less
@@ -3,8 +3,10 @@
   margin-bottom: 12px;
 }
 
-.statement_summary .table_wrapper {
-  flex: 1;
+.statement_summary {
+  .table_wrapper {
+    flex: 1;
+  }
 }
 
 .table_wrapper {
@@ -18,13 +20,14 @@
 }
 
 .digest_column {
-  max-width: 200px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
 /* for StatementSettingModal */
-.config_form :global(.ant-form-item) {
-  margin-bottom: 0;
+.config_form {
+  :global(.ant-form-item) {
+    margin-bottom: 0;
+  }
 }
