Remove segmented bar
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/packages/dashboard_components/src/Bar/Bar.module.less
+++ b/ui/packages/dashboard_components/src/Bar/Bar.module.less
@@ -28,16 +28,11 @@
   background: @bar-stack-color;
 }
 
-.bar,
-.segmented_bar {
-  height: 100%;
-  background-color: @bar-color;
-}
-
-.segmented_bar {
+.bar {
   position: absolute;
   top: 0;
   height: 100%;
+  background-color: @bar-color;
 }
 
 .error_bar {
