refine sql digest tooltip

--- a/ui/packages/statement/src/components/styles.module.less
+++ b/ui/packages/statement/src/components/styles.module.less
@@ -25,6 +25,14 @@
   overflow: hidden;
 }
 
+.digest_column_tooltip {
+  max-width: none;
+
+  pre {
+    background-color: transparent !important;
+  }
+}
+
 /* for StatementSettingModal */
 .config_form {
   :global(.ant-form-item) {
