--- a/ui/lib/apps/Statement/components/styles.module.less
+++ b/ui/lib/apps/Statement/components/styles.module.less
@@ -1,3 +1,16 @@
+@import '~antd/es/style/themes/default.less';
+
+.statement_disabled_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: @padding-page;
+
+  .statement_disabled_desc {
+    margin-bottom: 24px;
+  }
+}
+
 .statement_summary {
   display: flex;
   margin-bottom: 12px;
