--- a/ui/lib/components/Bar/Bar.module.less
+++ b/ui/lib/components/Bar/Bar.module.less
@@ -12,7 +12,7 @@
   flex-direction: row;
   align-items: center;
   min-height: 1em;
-  height: 100%;
+  height: unit(@line-height-base, em);
 }
 
 .text {
