Add new statement detail backends
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/lib/components/Card/index.module.less
+++ b/ui/lib/components/Card/index.module.less
@@ -13,6 +13,10 @@
   margin: @padding-page;
 }
 
+.cardInner.noMargin {
+  margin: 0;
+}
+
 .cardTitleSection {
   margin: @padding-lg 0;
   display: flex;
@@ -28,6 +32,6 @@
   margin-right: @padding-lg;
 }
 
-.cardContent {
-  margin: @padding-lg 0;
+.hasTitle .cardContent {
+  margin-top: @padding-lg;
 }
