--- a/ui/diagnoseReportApp/index.css
+++ b/ui/diagnoseReportApp/index.css
@@ -16,3 +16,21 @@ tr.subvalues.fold {
   cursor: pointer;
   color: #2160c4;
 }
+
+.actions {
+  padding: 8px 0;
+  background-color: white;
+
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+.table-header-row {
+  position: sticky;
+  top: 55px;
+  z-index: 1;
+
+  background-color: #888;
+  color: white !important;
+}
