--- a/ui/lib/apps/Statement/components/TimeRangeSelector.module.less
+++ b/ui/lib/apps/Statement/components/TimeRangeSelector.module.less
@@ -8,7 +8,7 @@
   box-shadow: @box-shadow-base;
   box-sizing: border-box;
 
-  .fixed_time_ranges {
+  .usual_time_ranges {
     span {
       color: @gray-6;
     }
@@ -23,14 +23,14 @@
   }
 
   .time_range_items {
-    max-width: 300px;
+    max-width: 360px;
     margin-top: 8px;
     display: flex;
     flex-wrap: wrap;
   }
 
   .time_range_item {
-    width: 100px;
+    width: 120px;
     padding-bottom: 4px;
     cursor: pointer;
   }
