Refine Statement details
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/lib/components/Descriptions/index.module.less
+++ b/ui/lib/components/Descriptions/index.module.less
@@ -27,12 +27,20 @@
 }
 
 .item {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  // nothing for now
+}
 
+.itemSingleline {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   > span {
     display: inline;
+  }
+  pre {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
