Improve overview page statements
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/lib/components/Card/index.module.less
+++ b/ui/lib/components/Card/index.module.less
@@ -28,8 +28,16 @@
   color: @heading-color;
   font-size: @heading-4-size;
   line-height: 32px;
+  margin-right: @padding-md;
+}
+
+.cardSubTitle {
+  margin-left: @padding-md;
+  margin-right: @padding-md;
+}
+
+.cardTitleSpacer {
   flex-grow: 1;
-  margin-right: @padding-lg;
 }
 
 .hasTitle > .cardContent {
