apply for statements header

--- a/ui/lib/apps/Statement/components/styles.module.less
+++ b/ui/lib/apps/Statement/components/styles.module.less
@@ -11,23 +11,21 @@
   }
 }
 
-.statement_summary {
+.overview_header {
   display: flex;
-  margin-bottom: 12px;
-}
 
-.statement_summary {
-  .table_wrapper {
-    flex: 1;
+  :global(.ant-space-item) {
+    margin-bottom: 8px;
   }
 }
 
-.table_wrapper {
-  background-color: white;
+.overview_options {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.statement_statis {
-  background-color: white;
-  padding: 12px;
-  margin-left: 12px;
+.overview_right_actions {
+  align-self: flex-start;
+  margin-top: 6px;
 }
