Add metrics to overview (dirty impl)
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/lib/components/Card/index.module.less
+++ b/ui/lib/components/Card/index.module.less
@@ -11,10 +11,18 @@
 
 .cardInner {
   margin: @padding-page;
-}
 
-.cardInner.noMargin {
-  margin: 0;
+  &.noMargin {
+    margin: 0;
+  }
+
+  &.noMarginLeft {
+    margin-left: 0;
+  }
+
+  &.noMarginRight {
+    margin-left: 0;
+  }
 }
 
 .cardTitleSection {
