support select all and reset

--- a/ui/lib/components/ColumnsSelector/index.module.less
+++ b/ui/lib/components/ColumnsSelector/index.module.less
@@ -1,5 +1,12 @@
 @import '~antd/es/style/themes/default.less';
 
+.title_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 32px;
+}
+
 .foot_container {
   border-top: 1px solid @border-color-split;
   margin: 0 -@popover-padding-horizontal;
