--- a/ui/lib/components/BaseSelect/index.module.less
+++ b/ui/lib/components/BaseSelect/index.module.less
@@ -64,6 +64,10 @@
   transition: all 0.3s;
   pointer-events: none;
   width: 100%;
+
+  &.isPlaceholder {
+    opacity: 0.4;
+  }
 }
 
 .baseSelectArrow {
