--- a/ui/lib/antd.global.less
+++ b/ui/lib/antd.global.less
@@ -1,3 +1,5 @@
+// Slightly modified from https://github.com/ant-design/ant-design/blob/master/components/style/core/base.less
+
 /* stylelint-disable at-rule-no-unknown */
 
 // Reboot
