--- a/ui/lib/apps/SearchLogs/components/Styles.module.less
+++ b/ui/lib/apps/SearchLogs/components/Styles.module.less
@@ -1,3 +1,5 @@
+@import '~antd/lib/style/themes/default.less';
+
 .buttons {
   margin-top: 12px;
 }
@@ -20,5 +22,7 @@
 }
 
 .highlight {
-  background: #fffb8f;
+  background: @gold-3;
+  margin: 0;
+  padding: 0;
 }
