--- a/ui/dashboardApp/layout/main/index.module.dark.less
+++ b/ui/dashboardApp/layout/main/index.module.dark.less
@@ -5,7 +5,7 @@
   background: @component-background;
 }
 
-.contentback {
+.contentBack {
   color: @text-color;
-  background: @body-background;
+  background: @component-background;
 }
