--- a/ui/lib/antd.dark.less
+++ b/ui/lib/antd.dark.less
@@ -1,1 +1,7 @@
-@import '~antd/es/style/dark.less';
+@import '~antd/lib/style/themes/default.less';
+@import '~antd/dist/antd.dark.less';
+@import './antd.global.less';
+@primary-color: #3351ff;
+body {
+  @import './antd.override.less';
+}
