keyviz: fix the bug that the copied text is incomplete
Signed-off-by: Zheng Xiangsheng <hundundm@gmail.com>

--- a/ui/lib/apps/KeyViz/components/KeyViz.less
+++ b/ui/lib/apps/KeyViz/components/KeyViz.less
@@ -108,8 +108,12 @@
     .overviewLabel {
       margin: 20px 0;
       .subLabel {
-        display: block;
         padding: 1 3px;
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 250px;
       }
     }
 
