use antd as global style
Signed-off-by: Fullstop000 <fullstop1005@gmail.com>

--- a/ui/lib/antd.less
+++ b/ui/lib/antd.less
@@ -6,6 +6,7 @@
 @import './antd.global.less';
 @import '~antd/es/style/core/iconfont';
 @import '~antd/es/style/core/motion';
+@import '~antd/lib/style/components.less';
 
 body {
   @import './antd.override.less';
