--- a/ui/lib/apps/SearchLogs/components/Styles.module.less
+++ b/ui/lib/apps/SearchLogs/components/Styles.module.less
@@ -1,5 +1,6 @@
 @import '~antd/lib/style/themes/default.less';
 
+// FIXME: Use <Space>
 .buttons {
   margin-top: 12px;
 }
@@ -7,10 +8,6 @@
 .buttons > :global(button) {
   margin-right: 12px;
   margin-bottom: 12px;
-}
-
-.components > :global(div) {
-  width: 100%;
 }
 
 .logText {
