--- a/ui/lib/components/InstanceSelect/DropOverlay.module.less
+++ b/ui/lib/components/InstanceSelect/DropOverlay.module.less
@@ -1,6 +1,14 @@
 .instanceDropdown {
   font-size: 0.8rem;
-  :global .ms-DetailsHeader {
-    padding-top: 0;
+  :global {
+    .ms-DetailsHeader {
+      padding-top: 0;
+    }
+
+    .ant-input-affix-wrapper {
+      border: 0;
+      box-shadow: none;
+      outline: 0;
+    }
   }
 }
