--- a/ui/lib/components/Descriptions/index.module.less
+++ b/ui/lib/components/Descriptions/index.module.less
@@ -7,13 +7,11 @@
     }
 
     .ant-descriptions-row > th {
-      padding: 0;
-      padding-bottom: @padding-xs;
+      padding: 0 0 @padding-xs;
     }
 
     .ant-descriptions-row > td {
-      padding: 0;
-      padding-bottom: @padding-md;
+      padding: 0 0 @padding-md;
     }
 
     .ant-descriptions-item-label {
