--- a/ui/dashboardApp/layout/main/Sider/Banner.module.less
+++ b/ui/dashboardApp/layout/main/Sider/Banner.module.less
@@ -12,8 +12,7 @@
 }
 
 .bannerLeft {
-  padding: 20px 24px;
-  padding-right: 16px;
+  padding: 20px 16px 20px 24px;
 }
 
 .bannerLeftAnimationWrapper {
