--- a/ui/lib/apps/KeyViz/components/KeyViz.less
+++ b/ui/lib/apps/KeyViz/components/KeyViz.less
@@ -141,7 +141,8 @@
 
   .heatmap {
     flex-grow: 1;
-    margin: -32px @padding-page @padding-page;
+    margin: @padding-page;
+    margin-top: -32px;
   }
 }
 
