--- a/ui/lib/components/AnimatedSkeleton/index.module.less
+++ b/ui/lib/components/AnimatedSkeleton/index.module.less
@@ -1,16 +1,19 @@
-.container.isAnimating {
-  position: relative;
+@import '~antd/es/style/mixins/motion.less';
 
-  .skeleton {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+.container :global {
+  .skeletonAnimationFirstTime {
+    animation: 0.5s linear 0.5s antFadeIn;
+    animation-fill-mode: both;
+    animation-iteration-count: 1;
+  }
+  .skeletonAnimationNotFirstTime {
+    animation: 0.5s linear 0 antFadeIn;
+    animation-fill-mode: both;
+    animation-iteration-count: 1;
   }
 
-  .skeleton,
-  .content {
-    will-change: opacity;
+  .contentAnimation {
+    animation: 0.2s linear 0s antFadeIn;
+    animation-fill-mode: both;
   }
 }
