--- a/ui/dashboardApp/layout/main/Sider/index.module.less
+++ b/ui/dashboardApp/layout/main/Sider/index.module.less
@@ -2,10 +2,11 @@
 
 @sider-background: #f7f7fa;
 
+.wrapper {
+  transition: width 444ms ease;
+}
+
 .sider {
-  position: fixed;
-  left: 0;
-  top: 0;
   height: 100%;
   z-index: 1;
   background: linear-gradient(@sider-background, #ebeffa);
